--- a/src/launcher/index.html
+++ b/src/launcher/index.html
@@ -23,6 +23,15 @@
 	<div id="root"></div>
 
 	<script>
+		(function (window) {
+			const {
+				// remote,
+				ipcRenderer
+			} = require('electron');
+			window.ipcRenderer = ipcRenderer;
+			// window.remote = remote;
+		})(window);
+
 		if (process.env.NODE_ENV === 'development') {
 			document.write('<script defer src=\"http://localhost:1112/build/launcher.js"><\/script>')
 			// require('electron-react-devtools').install();
